# cude_lw2

./: .cproject  .gitignore  .project  CMakeLists.txt  template_vs2015.vcxproj
Debug/: lzmp  makefile
Debug/scr/: cuda_functions.d  lw.d  lzmp.d  main.d  subdir.mk
inc/: alg.h  alg_CompV.h  alg_compDistFromEx.h  alg_initDnun.h  config.h  dist.h  jetbrains_ide.h  lw.h  lzmp.h  mat.h  max_min.h  misc.h  types.h
scr/: alg.cu  alg_CompV.cu  alg_compDistFromEx.cu  alg_initDnun.cu  dist.cu  lw.cu  lzmp.cu  main.cpp  mat.cu  max_min.cu  misc.cu
